force-app/main/default/objects/Applicable_Offer__c/Applicable_Offer__c.object-meta.xml
<CustomObject>
    <label>Applicable Offer</label>
    <nameField>
        <displayFormat>AO-{000000}</displayFormat>
        <label>Applicable Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicable Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>