force-app/main/default/objects/Applicable_Offer__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Applicable Offers</relationshipLabel>
    <relationshipName>Applicable_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>