force-app/main/default/objects/Applicable_Offer__c/fields/Offer_Availed__c.field-meta.xml
<CustomField>
    <fullName>Offer_Availed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Availed?</label>
    <type>Checkbox</type>
</CustomField>