force-app/main/default/objects/Applicable_Offer__c/fields/RW_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_End_Date__c</fullName>
    <formula>Sub_Offer__r.RW_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>