force-app/main/default/objects/Applicable_Offer__c/fields/RW_Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Offer_Name__c</fullName>
    <formula>Offer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Name</label>
    <type>Text</type>
</CustomField>