force-app/main/default/objects/Applicable_Offer__c/fields/RW_Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Offer_Status__c</fullName>
    <formula>Sub_Offer__r.RW_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Status</label>
    <type>Text</type>
</CustomField>