force-app/main/default/objects/Applicable_Offer__c/fields/RW_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Start_Date__c</fullName>
    <formula>Sub_Offer__r.RW_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>