force-app/main/default/objects/Applicable_Offer__c/fields/RW_Sub_Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Sub_Offer_Name__c</fullName>
    <formula>Sub_Offer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Offer Name</label>
    <type>Text</type>
</CustomField>