force-app/main/default/objects/Applicable_Offer__c/fields/Sub_Offer__c.field-meta.xml
<CustomField>
    <fullName>Sub_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Offer</label>
    <referenceTo>RW_Sub_Offer__c</referenceTo>
    <relationshipLabel>Applicable Offers</relationshipLabel>
    <relationshipName>Applicable_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>