force-app/main/default/objects/Applicable_Offer__c/fields/Type_Of_Offer__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Offer__c</fullName>
    <label>Type Of Offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOI</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>