force-app/main/default/objects/Applicable_Offer__c/recordTypes/EOI.recordType-meta.xml
<RecordType>
    <fullName>EOI</fullName>
    <active>true</active>
    <label>EOI</label>
</RecordType>